[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/tiles/hexRed.png" type="Texture" id=1]
[ext_resource path="res://assets/tiles/hexYellow.png" type="Texture" id=2]
[ext_resource path="res://assets/tiles/hexBlue.png" type="Texture" id=3]
[ext_resource path="res://assets/tiles/hexcolorset.tres" type="TileSet" id=4]
[ext_resource path="res://scripts/global.gd" type="Script" id=5]
[ext_resource path="res://scripts/HexMap.gd" type="Script" id=6]
[ext_resource path="res://assets/tiles/hexGreen.png" type="Texture" id=7]
[ext_resource path="res://assets/background.png" type="Texture" id=8]

[node name="Map" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 320, 240 )
texture = ExtResource( 8 )

[node name="HexMap" type="TileMap" parent="."]
position = Vector2( 9, 3 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 42, 48 )
cell_half_offset = 1
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( 65537, 0, 0, 65538, 0, 0, 65539, 2, 0, 65540, 2, 0, 65541, 1, 0, 65542, 0, 0, 65543, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 0, 0, 131077, 0, 0, 131078, 2, 0, 131079, 1, 0, 196609, 0, 0, 196610, 3, 0, 196611, 1, 0, 196612, 1, 0, 196613, 0, 0, 196614, 2, 0, 196615, 1, 0, 262145, 0, 0, 262146, 1, 0, 262147, 1, 0, 262148, 0, 0, 262149, 3, 0, 262150, 3, 0, 262151, 2, 0, 327681, 1, 0, 327682, 0, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 0, 0, 327687, 0, 0, 393217, 0, 0, 393218, 2, 0, 393219, 2, 0, 393220, 0, 0, 393221, 1, 0, 393222, 0, 0, 393223, 2, 0 )
script = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 170.0
margin_top = 403.0
margin_right = 213.0
margin_bottom = 417.0
text = "Turns: "

[node name="ButtonNewGame" type="Button" parent="."]
margin_left = 61.0
margin_top = 387.0
margin_right = 151.0
margin_bottom = 433.0
text = "New Game"

[node name="YellowTextureButton" type="TextureButton" parent="."]
margin_left = 451.0
margin_top = 21.0
margin_right = 515.0
margin_bottom = 85.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 2 )

[node name="RedTextureButton" type="TextureButton" parent="."]
margin_left = 451.0
margin_top = 121.0
margin_right = 516.0
margin_bottom = 185.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 1 )

[node name="BlueTextureButton" type="TextureButton" parent="."]
margin_left = 451.0
margin_top = 221.0
margin_right = 515.0
margin_bottom = 285.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )

[node name="GreenTextureButton" type="TextureButton" parent="."]
margin_left = 451.0
margin_top = 321.0
margin_right = 515.0
margin_bottom = 385.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 240 )

[connection signal="pressed" from="ButtonNewGame" to="." method="_on_ButtonNewGame_pressed"]
[connection signal="pressed" from="YellowTextureButton" to="." method="_on_YellowTextureButton_pressed"]
[connection signal="pressed" from="RedTextureButton" to="." method="_on_RedTextureButton_pressed"]
[connection signal="pressed" from="BlueTextureButton" to="." method="_on_BlueTextureButton_pressed"]
[connection signal="pressed" from="GreenTextureButton" to="." method="_on_GreenTextureButton_pressed"]
